Quorum3/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignObjectNumberField.quorum
class Main
    number v = 5.0
    action Main
        Test(v)
    end

    action Test(Object var)
        if var:GetValue() = 5.0
            output "passed"
        end
    end
end
