Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignObjectNumberField.quorum
class Main
    number v = 5.0
    action Main
        Test(v)
    end

    action Test(Object var)
    end
end
